--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -7,8 +7,11 @@
 <body>
   
   <a href="funcionarioServlet">Cadastro de Funcionario</a><br>
-  <a href="gerenciarFuncionarioServlet">consulta de Funcionario</a>
-  
+  <a href="gerenciarFuncionarioServlet">Consulta de Funcionario</a><br>
+  <a href="clienteServlet">Cadastro de Cliente</a><br>
+  <a href="gerenciarClienteServlet">Consulta de Cliente</a><br>
+  <a href="produtoServlet">Cadastro de Produto</a><br>
+  <a href="gerenciarProdutoServlet">Consulta de Produto</a><br>
  
 </body>
 </html>
